header color change scroll remove from validate User Page

--- a/src/pages/validate-user-otp/validate-user-otp.html
+++ b/src/pages/validate-user-otp/validate-user-otp.html
@@ -7,7 +7,7 @@
 
 
 
-  <ion-content padding class="background">
+  <ion-content padding class="background" scroll-content="false">
 
     <div text-center class="app-logo-container">
       <img src="" alt="" />
