--- a/src/pages/validate-user/validate-user.html
+++ b/src/pages/validate-user/validate-user.html
@@ -29,7 +29,7 @@
 
 </ion-content> -->
 
-<ion-content padding class="background">
+<ion-content padding class="background" Scroll="false">
 
   <div text-center class="app-logo-container1">
     <img src="" alt="" />
