--- a/src/pages/update-your-details/update-your-details.html
+++ b/src/pages/update-your-details/update-your-details.html
@@ -21,9 +21,26 @@
 
 
 <ion-content padding>
+  <div class="">
+
+
   <ion-item class="ud_fn_ln">
     <ion-input type="text" placeholder="First Name and Last Name"></ion-input>
   </ion-item>
+<div class="" style="text-align: center; line-height: 2em; font-size: x-large;">
+  or
+</div>
+
+  <div class="" style="text-align: center; line-height: 2em; font-size: x-large;">
+    Do You Have AA eCard?
+  </div>
+    <div class="">
+
+
+    <button ion-button type="button" class="buttonYesNO" name="button" (click)="yesClick()">Yes</button>
+    <button ion-button type="button" class="buttonYesNO" name="button">No</button>
+</div>
+</div>
 </ion-content>
 
 <ion-footer padding>
