Working on slider

--- a/src/pages/validate-user-otp/validate-user-otp.html
+++ b/src/pages/validate-user-otp/validate-user-otp.html
@@ -44,11 +44,10 @@
 
 
 
-    <h3 text-center color="light" class="" style="margin-bottom: 10vh;">
+    <h3 text-center color="light" class="" style="margin-bottom: 10vh;margin-top: 15vh;">
       Enter your OTP
     </h3>
 
-  <!-- FIXME: Sceeen goes upward when keyboard comes -->
 
   <ion-item class="otpnumber">
     <ion-input type="tel" placeholder="OTP Number"></ion-input>
